Google map feature is added. Bug squash require on chart.

--- a/public_dist/css/bundle.css
+++ b/public_dist/css/bundle.css
@@ -172,6 +172,10 @@
 .chart .lable {
   display: none; }
 
+#map {
+  width: 100%;
+  height: 400px; }
+
 /* ============================================================================= */
 /* ======================== End: Main Styles =================================== */
 /* ============================================================================= */
